Update configuration handling, enhance dependency management, and improve application structure
- Added `github.com/spf13/viper` to the project dependencies for improved configuration management.
- Updated `.golangci.yml` to include new dependencies and ensure proper linting for the added packages.
- Refactored the `Config` struct to utilize `mapstructure` tags for better compatibility with Viper.
- Enhanced the `Load` function to leverage Viper for configuration loading, including environment variable binding and default values.
- Introduced methods in the `App` struct for better testing capabilities, allowing injection of services.
- Improved test reliability by creating temporary directories for configuration files and ensuring proper cleanup.

These changes enhance the robustness of configuration management, improve dependency handling, and streamline the application structure.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -66,6 +66,7 @@ linters-settings:
           - github.com/marcsauter/single
           - golang.design/x/hotkey
           - github.com/google/uuid
+          - github.com/spf13/viper
           # Internal packages
           - github.com/jonesrussell/godo/internal
           - github.com/jonesrussell/godo/pkg
