Enhance configuration management and QuickNote functionality
- Updated the configuration files to include a unique application ID and improved logging settings, including console output and file management.
- Refactored the QuickNote initialization to streamline the creation process and improve dependency management.
- Enhanced the handling of hotkeys and shortcuts within the QuickNote interface, ensuring better user experience and functionality.
- Improved test coverage for configuration loading and hotkey validation, ensuring robustness and reliability in various environments.

These changes contribute to a more organized codebase and enhance the overall usability of the application.

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,32 +1,32 @@
-# Default configuration
+# Default configuration for Godo
 app:
   name: "Godo"
-  version: "1.0.0"
+  version: "0.1.0"
+  id: "io.github.jonesrussell.godo"
 
 database:
   path: "./data/godo.db"
   max_open_conns: 1
   max_idle_conns: 1
 
-hotkeys:
-  quick_note:
-    modifiers: ["ctrl", "alt"]
-    key: "g"
-  open_app:
-    modifiers: ["ctrl", "alt"]
-    key: "o"
-
 logging:
-  level: "info"
-  output:
-    - "./logs/godo.log"
-    - "stdout"
-  error_output:
-    - "./logs/godo_error.log"
-    - "stderr"
+  level: "info"  # info, debug, warn, error
+  console: true
+  file:
+    enabled: false
+    path: "./logs/godo.log"
+    max_size: 10    # megabytes
+    max_backups: 3
+    max_age: 28     # days
+
+hotkeys:
+  quick_note: "Ctrl+Alt+G"
 
 ui:
+  main_window:
+    width: 800
+    height: 600
+    start_hidden: true
   quick_note:
     width: 400
-    height: 60
-    title: "Quick Note" 
+    height: 200
