Refactor configuration management and streamline default settings
- Removed obsolete configuration files for development and production environments to simplify the codebase.
- Updated the default configuration structure to enhance clarity and maintainability, including the introduction of a logger section.
- Refactored the configuration loading process to resolve paths dynamically and ensure proper defaults are applied.
- Improved test data for configuration tests to align with the new structure, ensuring robust validation of configuration loading.

These changes enhance the overall organization and usability of the configuration management system, making it more efficient and easier to maintain.

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -5,19 +5,11 @@ app:
   id: "io.github.jonesrussell.godo"
 
 database:
-  path: "./data/godo.db"
-  max_open_conns: 1
-  max_idle_conns: 1
+  path: "godo.db"
 
-logging:
-  level: "info"  # info, debug, warn, error
+logger:
+  level: "info"
   console: true
-  file:
-    enabled: false
-    path: "./logs/godo.log"
-    max_size: 10    # megabytes
-    max_backups: 3
-    max_age: 28     # days
 
 hotkeys:
   quick_note: "Ctrl+Alt+G"
