Refactor task naming in CI workflows for consistency
- Updated task names in GitHub Actions workflows to follow a consistent naming convention, changing `test-coverage-threshold` to `test:coverage:threshold` and `build-all` to `build:all`.
- These changes enhance clarity and maintainability of the CI configuration, ensuring a more organized approach to task execution.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,10 +44,10 @@ jobs:
     - name: Run tests and linting
       run: |
         task lint
-        task test-coverage-threshold
+        task test:coverage:threshold
 
     - name: Build all platforms
-      run: task build-all
+      run: task build:all
 
     - name: Cross-platform build check
       run: |
