--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -101,7 +101,7 @@ tasks:
       - go test -race -coverprofile=coverage.out -coverpkg=./... ./...
       - go tool cover -html=coverage.out -o coverage.html
       - go tool cover -func=coverage.out
-      - cmd: Invoke-Item coverage.html
+      - cmd: powershell.exe -Command "Invoke-Item coverage.html"
         platforms: [windows]
       - cmd: open coverage.html
         platforms: [darwin]
