--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -98,9 +98,9 @@ tasks:
     desc: Run tests with coverage report
     deps: [wire]
     cmds:
-      - go test -race -coverprofile=coverage.out -coverpkg=./... ./...
-      - go tool cover -html=coverage.out -o coverage.html
-      - go tool cover -func=coverage.out
+      - 'go test -race -coverprofile="coverage.out" -coverpkg="./..." "./..."'
+      - 'go tool cover -html="coverage.out" -o coverage.html'
+      - 'go tool cover -func="coverage.out"'
 
   test:coverage:threshold:
     desc: Run tests and check coverage threshold
