--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,6 +32,9 @@ jobs:
           libxinerama-dev \
           libxi-dev
 
+    - name: Install Wire
+      run: go install github.com/google/wire/cmd/wire@latest
+
     - name: Install Task
       uses: arduino/setup-task@v1
       with:
@@ -40,6 +43,9 @@ jobs:
 
     - name: Install project dependencies
       run: task install
+
+    - name: Generate Wire code
+      run: task wire
 
     - name: Run tests and linting
       run: |
