--- a/cmd/godo/FyneApp.toml
+++ b/cmd/godo/FyneApp.toml
@@ -1,7 +1,7 @@
 Website = "https://github.com/jonesrussell/godo"
 
 [Details]
-  Icon = "Icon.png"
+  Icon = "icon.png"
   Name = "Godo"
   ID = "com.jonesrussell.godo"
   Version = "0.1.0"
