Refactor Wire code generation in Taskfile and GitHub Actions workflow
- Updated the Taskfile.yaml to generate Wire code for multiple operating systems (Linux, Windows, and macOS) in a single command.
- Modified the GitHub Actions workflow to run the Wire code generation for the same operating systems, ensuring consistency in CI/CD processes.
- Removed the build constraint comment from the generated wire.go file to streamline the code generation process.

These changes enhance the development workflow by ensuring that Wire code is generated for all target platforms, improving compatibility and integration.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,7 +45,11 @@ jobs:
       run: task install
 
     - name: Generate Wire code
-      run: task wire
+      run: |
+        GOOS=linux wire
+        GOOS=windows wire
+        GOOS=darwin wire
+      working-directory: ./internal/container
 
     - name: Run tests and linting
       run: |
