Update GitHub Actions workflow to streamline testing process
- Modified the GitHub Actions workflow to run the test task without coverage threshold, simplifying the testing step.
- This change enhances the CI/CD process by focusing on core testing functionality, improving efficiency in the development workflow.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Run tests and linting
       run: |
         task lint
-        task test:coverage:threshold
+        task test
 
     - name: Build all platforms
       run: task build:all
