Update .gitattributes for consistent line endings across Go files
- Modified .gitattributes to enforce LF line endings for all text files, including go.mod and go.sum, ensuring consistency in the codebase.
- This change enhances cross-platform compatibility and prevents potential issues related to line ending discrepancies in version control.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,10 @@
 # Auto detect text files and perform LF normalization
-* text=auto
+* text=auto eol=lf
 
 # Go files should always use LF
 *.go text eol=lf
+go.mod text eol=lf
+go.sum text eol=lf
 
 # Taskfile should use LF
 *.yaml text eol=lf
