Refactor Go version verification in Taskfile.yaml for cross-platform compatibility
- Updated the Go version verification logic in Taskfile.yaml to support both Windows and Unix-like systems.
- Implemented platform-specific commands to ensure that the Go version meets the minimum requirement of 1.23 across different operating systems.
- This change enhances the development environment setup by providing clearer error messages and improving compatibility.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -269,8 +269,8 @@ tasks:
     desc: Verify development environment
     cmds:
       - |
-        GO_VERSION=$(go version | cut -d " " -f 3)
-        if [[ "$GO_VERSION" != "go{{.GO_VERSION}}" ]]; then
-          echo "Wrong Go version. Expected {{.GO_VERSION}}, got ${GO_VERSION#go}"
-          exit 1
-        fi
+        {{if eq OS "windows"}}
+          powershell -Command "if ((go version) -notmatch 'go1\.23|go1\.2[4-9]|go1\.[3-9]|go[2-9]') { Write-Error 'Go version must be 1.23 or higher'; exit 1 }"
+        {{else}}
+          go version | awk -F'go| ' '{split($3,v,"."); if (v[1] < 1 || (v[1] == 1 && v[2] < 23)) {print "Go version must be 1.23 or higher"; exit 1}}'
+        {{end}}
