--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,14 @@ updates:
    directory: "/"
    schedule:
      interval: weekly
+
+ - package-ecosystem: "gomod"
+   directory: "/"
+   schedule:
+     interval: weekly
+   open-pull-requests-limit: 10
+
+ - package-ecosystem: "github-actions"
+   directory: "/"
+   schedule:
+     interval: weekly
